--- a/index.html
+++ b/index.html
@@ -5,8 +5,23 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Week Planner</title>
   <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="layout.css">
 </head>
 <body>
+  <div class="container">
+    <div class="row">
+      <div class="column-full justify-center-content">
+        <h1 class="plannertitle">Weekly Planner</h1>
+      </div>
+      <div class="row">
+        <div class="column-full justify-center-content">
+          <div class="addbutton">
+            <button class="addentry">Add Entry</button>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
   <script src="main.js"></script>
 </body>
 </html>
