Added font and styling to the button

--- a/index.html
+++ b/index.html
@@ -6,16 +6,19 @@
   <title>Week Planner</title>
   <link rel="stylesheet" href="styles.css">
   <link rel="stylesheet" href="layout.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Comic+Neue&display=swap" rel="stylesheet">
 </head>
 <body>
   <div class="container">
     <div class="row">
       <div class="column-full justify-center-content">
-        <h1 class="plannertitle">Weekly Planner</h1>
+        <h1 class="plannertitle text-align">Weekly Planner</h1>
       </div>
       <div class="row">
         <div class="column-full justify-center-content">
-          <div class="addbutton">
+          <div class="addbutton justify-center-content text-align">
             <button class="addentry">Add Entry</button>
           </div>
         </div>
