--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
   </div>
   <div class="modal-container view">
     <div class="modal">
-      <div class="text-box">
-        <h1 class="text-align">Add Entry</h1>
+      <h1 class="text-align">Add Entry</h1>
+      <div class="selectcontainer">
         <select name="Days" id="days-of-week">
           <option value="Day of Week" selected>Day of Week</option>
           <option value="Monday">Monday</option>
@@ -40,9 +40,21 @@
           <option value="Friday">Friday</option>
           <option value="Saturday">Saturday</option>
           <option value="Sunday">Sunday</option>
-        </select></div>
+        </select>
+        <select name="Time" id="time-of-the-day">
+          <option value="Time" selected>Time</option>
+          <option value="9">9:00 AM</option>
+          <option value="10">10:00 AM</option>
+          <option value="11">11:00 AM</option>
+          <option value="12">12:00 PM</option>
+          <option value="1">1:00 PM</option>
+          <option value="2">2:00 PM</option>
+          <option value="3">3:00 PM</option>
+          <option value="4">4:00 PM</option>
+          <option value="5">5:00 PM</option>
+        </select>
+      </div>
     </div>
-
   </div>
   <script src="main.js"></script>
 </body>
