fixed modal container

--- a/index.html
+++ b/index.html
@@ -57,14 +57,18 @@
             </select>
           </div>
         </div>
-      </div>
-      <div class="selectcontainer">
-        <div class="column-full">
-          <textarea name="text" id="text" placeholder="description" rows="5" ></textarea>
+        <div class="row">
+          <div class="column-full">
+            <textarea name="text" id="text" placeholder="description" rows="5" ></textarea>
+          </div>
+
         </div>
-        <div class="submitcontainer">
-          <button class="submitentry" type="submit">Submit</button>
+        <div class="row align-right">
+          <div class="submitcontainer align-right">
+            <button class="submitentry" type="submit">Submit</button>
+          </div>
         </div>
+
       </div>
     </div>
   </div>
