--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       </div>
     </div>
   </div>
-  <div class="modal-container view">
+  <div class="modal-container hidden">
     <div class="modal">
       <h1 class="text-align">Add Entry</h1>
       <div class="selectcontainer">
@@ -59,13 +59,12 @@
         </div>
         <div class="row">
           <div class="column-full">
-            <textarea name="text" id="text" placeholder="description" rows="5" ></textarea>
+            <textarea name="text" id="text" placeholder="Description" rows="5"></textarea>
           </div>
-
         </div>
         <div class="row align-right">
           <div class="submitcontainer align-right">
-            <button class="submitentry" type="submit">Submit</button>
+            <button class="submitentry buttonboxshadow" type="submit">Submit</button>
           </div>
         </div>
 
