--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Comic+Neue&display=swap" rel="stylesheet">
 </head>
 <body>
-  <div class="view" data-view="add-entry-page">
+  <div class="view hidden" data-view="add-entry-page">
     <div class="container">
       <div class="row">
         <div class="column-full justify-center-content">
@@ -27,6 +27,7 @@
       </div>
     </div>
   </div>
+
   <!-- <div id="modalview" class="view hidden"> -->
   <div class="modal-container view hidden">
     <div class="modal">
@@ -69,6 +70,89 @@
           </div>
         </div>
       </form>
+    </div>
+
+  </div>
+  <div class="container view" data-view="table-view">
+    <div class="view">
+      <div class="row">
+        <div class="column-full">
+          <h1 class="plannertitle text-align">Weekly Planner</h1>
+          <div class="row">
+            <div class="column-full space-between">
+              <button class="dayBox">Sunday</button>
+              <button class="dayBox">Monday</button>
+              <button class="dayBox">Tuesday</button>
+              <button class="dayBox">Wednesday</button>
+              <button class="dayBox">Thursday</button>
+              <button class="dayBox">Friday</button>
+              <button class="dayBox">Saturday</button>
+
+            </div>
+
+
+          </div>
+          <div class="row">
+            <div class="column-full justify-center-content">
+              <div class="justify-center-content text-align">
+                <button class="add-entry" id="add-table-page">Add Entry</button>
+              </div>
+            </div>
+          </div>
+          <div class="row">
+            <div class="column-full">
+              <h2 class="text-align">Scheduled Events for Monday</h2>
+            </div>
+          </div>
+          <div class="row">
+            <div class="column-full align-center">
+              <table>
+                <thead>
+                  <tr>
+                    <th>Time</th>
+                    <th>Description</th>
+                  </tr>
+                </thead>
+                <tbody>
+                  <tr>
+                    <td></td>
+                    <td></td>
+                  </tr>
+                  <tr>
+                    <td></td>
+                    <td></td>
+                  </tr>
+                  <tr>
+                    <td></td>
+                    <td></td>
+                  </tr>
+                  <tr>
+                    <td></td>
+                    <td></td>
+                  </tr>
+                  <tr>
+                    <td></td>
+                    <td></td>
+                  </tr>
+                  <tr>
+                    <td></td>
+                    <td></td>
+                  </tr>
+                  <tr>
+                    <td></td>
+                    <td></td>
+                  </tr>
+                  <tr>
+                    <td></td>
+                    <td></td>
+                  </tr>
+                </tbody>
+              </table>
+            </div>
+          </div>
+
+        </div>
+      </div>
     </div>
   </div>
   <!-- </div> -->
